kubernetes/05-unifi-svc-https.yaml
apiVersion: v1
kind: Service
metadata:
  name: unifi-svc-https
  namespace: unifi
spec:
  selector:
    k8s-app: unifi-controller
  ports:
  - port: 443
    protocol: TCP
    targetPort: 8443
  type: ClusterIP
